# pixi-devenv

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  RELEASING.md  mypy.ini  pyproject.toml
.github/workflows/: test.yml
src/pixi_devenv/: __main__.py  cli.py  consolidate.py  error.py  init.py  project.py  update.py  workspace.py
tests/: conftest.py  devenv_tester.py  test_cli.py  test_consolidate.py  test_init.py  test_project.py  test_update.py  test_workspace.py
tests/test_consolidate/: test_channels_and_platforms_from_bootstrap.txt  test_channels_and_platforms_overwrite.txt  test_dependencies.txt  test_dependencies_inheritance_bootstrap_inheritance.txt  test_dependencies_inheritance_no_inheritance.txt  test_dependencies_with_constraints.txt  test_env_vars.txt  test_env_vars_no_inheritance.txt  test_exclude_newer_from_upstream.txt  test_exclude_newer_overwrite.txt  test_feature_target_platform_filtering_linux_only.txt  test_features.txt  test_features_inheritance.txt  test_features_no_inheritance.txt  test_target_platform_filtering_linux_only.txt  test_target_platform_filtering_win_only.txt  test_targets.txt  test_targets_inheritance.txt
tests/test_init/: devenv_expected.toml  pixi_expected.toml
tests/test_project/: test_parse_complete_case.txt
tests/test_update/: test_basic_update.txt  test_exclude_newer_update.txt
